# iwms-government-backend

./: .env  .gitignore  COMPLAINT_GRIEVANCE_FLOW.md  HIERARCHY_GUIDE.md  backend_sync.sh  cron.sh  install.txt  iwms-government-backend.code-workspace  manage.sh  prompt.md  prompt_new.md  pyproject.toml  requirements.txt  scheduler.sh  server_uv_sync.sh
api/: __init__.py
app/: __init__.py  admin.py  apps.py
app/apis/: property_api.py
app/authentication/: __init__.py  jwt.py
app/middleware/: module_permission_middleware.py  request_meta_middleware.py
app/migrations/: 0003_staff_attendance_module.py
app/models/: __init__.py
app/permissions/: operator_permission.py  platform.py
app/serializers/: __init__.py  attendance_list.py  employee.py
app/services/: daily_trip_scheduler.py  hierarchy_assignment_service.py  hierarchy_tree_service.py  notification_service.py  openroute_service.py  push_notification_service.py  schema_sync_service.py
app/signals/: permission_signals.py  trip_plan_signals.py
app/urls/: base_urls.py  custom_router.py
app/utils/: audit_mixin.py  base_models.py  bin_qr.py  comfun.py  common_audit.py  complaint_ticket_routing.py  crew.py  customer_qr.py  email_utils.py  file_validators.py  hierarchy.py  hierarchy_entities.py  image_compress.py  model_mapper.py  pagination.py  password_encryption.py  permission_response.py  qr.py  roles.py  scoped_viewset.py  swagger.py  userscreen_column_sync.py  waste_images.py  waste_type_breakdown.py
app/validators/: unique_name_validator.py
app/viewsets/: __init__.py
config/: settings.py  settings_jwt.py  test_settings.py  urls.py
templates/drf-yasg/: swagger-ui.html
tests/: conftest.py
tests/attendance/: test_external_attendance_api.py  test_mobile_attendance_api.py
tests/operator_mobile/: test_operator_permission.py
tests/schedule_masters/: test_collection_point_bins_serializer.py
(+795 files in other folders)
